[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fair-decision-lab"
version = "0.1.0"
description = "An RL environment for AI bias auditing — OpenEnv hackathon submission"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "openai>=1.14.0",
    "requests>=2.31.0",
    "openenv",
]
